# simpletl

./: .gitignore  README.md  pyproject.toml
actions/NUTS_DATA/: forepaas.json  main.py
actions/custom_action_1/: forepaas.json
simpletl/: __init__.py  abstract.py  config_utils.py  destination.py  main.py  pipeline.py  source.py  transformation.py
simpletl/destinations/: __init__.py  delta.py  parquet.py
simpletl/sources/: __init__.py  csv.py  delta.py  geojson.py  shapefile.py  webjson.py  xml.py
simpletl/transformations/: __init__.py  polars.py  sql.py  transformation.py
src/simpletl/: __init__.py  pipeline.py
src/simpletl/destination/: data_loader.py
src/simpletl/transformation/: transformation_engine.py
tests/: test_config_utils.py  test_destination.py  test_source.py  test_transformation.py
