[project]
name = "simpletl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AntoineRoll", email = "antoine-rollet@live.fr" }
]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.63",
    "deltalake>=1.2.1",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.scripts]
simpletl = "simpletl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
