[project]
name = "simpletl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AntoineRoll", email = "antoine-rollet@live.fr" }
]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34,<1.35",
    "deltalake==1.1.0",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.scripts]
simpletl = "simpletl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=8.4.2",
    "ruff>=0.9",
    "python-dotenv>=1.2.1",
    "pyarrow>=22.0.0",
    "httpdbg>=2.1.3",
]
